# MEDICARE

./: .replit  config.json  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted-eate-a-Python-based-Medicine-Reminder-Application-with-the-following-features-Barcode-Scanner-U-1742907378692.txt
data/: medicine_database.db
src/: gui.py  main.py
src/utils/: cloud_sync.py  db_manager.py  google_calendar.py  google_sheets.py  notifier.py  pharmacy_locator.py  scanner.py  telegram_bot.py  xai_assistant.py
templates/: add_medicine.html  assistant.html  base.html  edit_medicine.html  index.html  medicines.html  pharmacy.html  pharmacy_results.html  scan.html  schedule.html  settings.html
