[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gunicorn>=23.0.0",
    "openai>=1.68.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "plyer>=2.1.0",
    "psycopg2-binary>=2.9.10",
    "pyzbar>=0.1.9",
    "schedule>=1.2.2",
    "tkcalendar>=1.6.1",
]
